--- a/css/app.css
+++ b/css/app.css
@@ -52,7 +52,7 @@ h1 {
 
 #particlebox {
     pointer-events: none;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
